Fix word wrap

--- a/src/styles/common/global-layout-classes.scss
+++ b/src/styles/common/global-layout-classes.scss
@@ -4,7 +4,6 @@
 }
 
 p {
-  @include mixin-w-h-fill(fit-content);
   line-height: $line-height;
-  word-break: break-all;
+  word-wrap: break-word;
 }
