--- a/src/styles/components/console-page.module.scss
+++ b/src/styles/components/console-page.module.scss
@@ -20,7 +20,8 @@
   .top {
     @include mixin-w-h-fill;
     @include hide-scroll-bar;
-    overflow: scroll;
+    overflow-y: scroll;
+    overflow-x: hidden;
   }
 
   .bottom {
