--- a/src/styles/components/prompt.module.scss
+++ b/src/styles/components/prompt.module.scss
@@ -1,6 +1,4 @@
 .prompt {
-  word-break: break-all;
-  word-wrap: break-word;
   width: 100%;
   padding: 0 $padding-content;
 }
